[package]
name = "buoyant"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.10.0"
borsh = "0.9.3"
bytemuck = {version = "1.7.2", features = ["derive"]}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
num-traits = "0.2.14"
num-derive = "0.3"
thiserror = "1.0"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.10.0"
solana-sdk = "=1.10.0"
solana-validator = "=1.10.0"
solana-logger = "=1.10.0"

[lib]
crate-type = ["cdylib", "lib"]
